updated download limit for the resumes and updated landing

--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,13 @@ body::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
+/* styling the card  */
+
+.card-img {
+  img {
+    image-rendering: high-quality;
+  }
+}
 
 
 /* custom loader spinner  */
